@@ -150,6 +150,7 @@ ID_PREF          = wx.ID_PREFERENCES
 ID_PREF_LANG     = wx.NewId()
 ID_PREF_AALIAS   = wx.NewId()
 ID_PREF_AUTO_RELOAD = wx.NewId()
+ID_PREF_AUTOCOMPEX = wx.NewId()
 ID_PREF_AUTOTRIM = wx.NewId()
 ID_PREF_CHKMOD   = wx.NewId()
 ID_PREF_CHKUPDATE = wx.NewId()
@@ -306,6 +307,7 @@ ID_2_PROF = {
              ID_PREF_UNINDENT     : 'BSUNINDENT',
              ID_APP_SPLASH        : 'APPSPLASH',
              ID_AUTOCOMP          : 'AUTO_COMP',
+             ID_PREF_AUTOCOMPEX   : 'AUTO_COMP_EX',
              ID_AUTOINDENT        : 'AUTO_INDENT',
              ID_PREF_AUTO_RELOAD  : 'AUTO_RELOAD',
              ID_PREF_AUTOTRIM     : 'AUTO_TRIM_WS',
